tiffany-ui/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_pets_picker.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 2751
expression: popup
---
  Select Pet
  Choose a pet to wake in the terminal.

  Type to filter pets...
  BSOD          A tiny blue-screen gremlin
  Dewey         A tidy duck for calm workspace
                days
  Fireball      Hot path energy for fast              Loading preview...
                iteration
  Null Signal   Quiet signal from the void
  Rocky         A steady rock when the diff
                gets large
  Seedy         Small green shoots for new
                ideas
  Stacky        A balanced stack for deep work
› tiffany-loop  The tiffany-loop companion

  Press enter to confirm or esc to go back
